# desktop-pet

./: CMakeLists.txt  Info.plist  README.md  main.cpp
main/: res.qrc
main/include/: Constants.h  DragState.h  DrinkTea.h  IdleState.h
main/source/: DragState.cpp  ExitState.cpp  IdleState.cpp  Majorwindow.cpp  TriggerManager.cpp
main/ui_include/: Majorwindow.ui
src/include/: AngryState.h  Constants.h  CryState.h  ExitState.h  Majorwindow.h  SingState.h  State.h  TriggerManager.h
src/source/: AngryState.cpp  CryState.cpp  DrinkTea.cpp  Majorwindow.cpp  SingState.cpp
